<resources>
    <string name="app_name">PJHappyBank</string>
    <string name="text_happy">Cùng nhau xây dựng gia đình hạnh phúc!</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="username">TÊN NGƯỜI DÙNG</string>
    <string name="password">MẬT KHẨU</string>
    <string name="email">Email</string>
    <string name="forgetpassword">Quên mật khẩu?</string>
    <string name="donthaveanaccount">Chưa có tài khoản</string>
    <string name="haveanaccount">Đã có tài khoản? Đăng nhập</string>
    <string name="daughter">Con gái</string>
    <string name="son">Con trai</string>
    <string name="father">Cha</string>
    <string name="mother">Mẹ</string>
    <string name="howareyou">Hôm nay bạn cảm thấy thế nào?</string>
    <string name="happy">Vui vẻ</string>
    <string name="angry">Tức giận</string>
    <string name="excited">Hào hứng</string>
    <string name="sad">Buồn bã</string>
    <string name="normal">Bình thường</string>
    <string name="whatdoyoudonow">Trong ngày qua, bạn đã...?</string>
    <string name="condolence">Rất tiếc! Bạn đã rút khỏi tài khoản</string>
    <string name="congratulation">Chúc mừng! Bạn đã nạp vào tài khoản</string>
    <string name="balancefluctuation">Biến động số dư</string>
    <string name="currentbalance">Số dư hiện tại</string>
    <string name="setting">Cài đặt</string>
    <string name="happycard">Thẻ hạnh phúc</string>



</resources>