<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nen1"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:gravity="center"
            android:text="@string/text_happy"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            android:fontFamily="@font/alata"></TextView>
         <TextView
             android:id="@+id/option_login"
             android:layout_width="300dp"
             android:layout_height="50dp"
             android:gravity="center"
             android:text="@string/login"
             android:layout_marginTop="20dp"
             android:textSize="25sp"
             android:fontFamily="@font/alata"
             android:textColor="@color/white"
             android:textStyle="bold"
             android:background="@drawable/backgroundbuttom"
             android:layout_gravity="center"
             ></TextView>
        <TextView
            android:id="@+id/option_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:fontFamily="@font/alata"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/backgroundbuttom"
            android:layout_gravity="center"
            ></TextView>

    </LinearLayout>


</FrameLayout>