<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nen3"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howareyou"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:textSize="40dp"
        android:fontFamily="@font/muli"
        android:textColor="@color/white"
        android:textStyle="bold"
        ></TextView>
    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="4dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/happy"
            ></ImageView>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/excited"
            android:padding="4dp"
            ></ImageView>
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/happy"
            android:padding="4dp"
            android:gravity="center"
            android:layout_marginEnd="50dp"
            android:textSize="20sp"
            android:fontFamily="@font/alata"
            android:textStyle="bold"
            ></TextView>
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/excited"
            android:padding="4dp"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/alata"
            android:textStyle="bold"
            ></TextView>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="4dp"
            android:src="@drawable/normal"
            ></ImageView>

    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alata"
            android:padding="4dp"
            android:text="@string/normal"
            android:textStyle="bold"
            android:textSize="20sp"></TextView>


    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="4dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/sad"
            ></ImageView>
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/angry"
            android:padding="4dp"
            ></ImageView>
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/alata"
            android:padding="4dp"
            android:text="@string/sad"
            android:textStyle="bold"
            android:textSize="20sp"></TextView>

        <TextView
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/angry"
            android:padding="4dp"
            android:textSize="20sp"
            android:fontFamily="@font/alata"
            android:textStyle="bold"
            ></TextView>
    </TableRow>
    <TableRow
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:padding="4dp"
            android:background="@drawable/white_circle_background"
            android:src="@drawable/ic_right"></ImageView>

    </TableRow>

</LinearLayout>