<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nen2"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="50dp"
        android:fontFamily="@font/muli"
        android:textColor="@color/white"
        android:textStyle="bold"
        ></TextView>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:background="@drawable/yellow_circle_background"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            android:fontFamily="@font/dmsans"
            android:textColor="#717070"
            ></TextView>
        <EditText
            android:id="@+id/email_login"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="260dp"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_height="wrap_content"
            android:text="abc@gmail.com"
            android:fontFamily="@font/poppins_light"
            android:background="@drawable/grey_background"
            android:inputType="textEmailAddress"
            ></EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/password"
            android:fontFamily="@font/dmsans"
            android:textColor="#717070"
            ></TextView>
        <EditText
            android:id="@+id/password_login"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="260dp"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:text="abc@gmail.com"
            android:fontFamily="@font/poppins_light"
            android:background="@drawable/grey_background"
            ></EditText>

        <TextView
            android:id="@+id/bt_login_fragment_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/login"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:fontFamily="@font/alata"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/backgroundbuttom"
            android:layout_gravity="center"
            ></TextView>


        <TextView
            android:id="@+id/forgetPassword_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:fontFamily="@font/dmsans"
            android:textColor="@color/black"
            android:layout_gravity="center"
            ></TextView>
        <TextView
            android:id="@+id/dontHaveAnAccount_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/donthaveanaccount"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:fontFamily="@font/dmsans"
            android:textColor="@color/black"
            android:layout_gravity="center"
            ></TextView>

    </LinearLayout>


</LinearLayout>