<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nen3"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bạn là...?"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="50dp"
        android:fontFamily="@font/muli"
        android:textColor="@color/white"
        android:textStyle="bold"
        ></TextView>
    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <ImageView
            android:id="@+id/daughter_fragment_select_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="4dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/daughter"
            ></ImageView>
        <ImageView
            android:id="@+id/son_fragment_select_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/son"
            android:padding="4dp"
            ></ImageView>
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daughter"
            android:padding="4dp"
            android:layout_marginEnd="70dp"
            android:textSize="20sp"
            android:fontFamily="@font/alata"
            android:textStyle="bold"
            ></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/son"
            android:padding="4dp"
            android:textSize="20sp"
            android:fontFamily="@font/alata"
            android:textStyle="bold"
            ></TextView>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <ImageView
            android:id="@+id/mother_fragment_select_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="4dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/mother"
            ></ImageView>
        <ImageView
            android:id="@+id/father_fragment_select_person"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/father"
            android:padding="4dp"
            ></ImageView>
    </TableRow>
    <TableRow
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/alata"
            android:padding="4dp"
            android:text="@string/mother"
            android:textStyle="bold"
            android:textSize="20sp"></TextView>

        <TextView
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/father"
            android:padding="4dp"
            android:textSize="20sp"
            android:fontFamily="@font/alata"
            android:textStyle="bold"
            ></TextView>
    </TableRow>

    <TextView
        android:id="@+id/option_register_fragment_select_person"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/register"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:fontFamily="@font/alata"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/backgroundbuttom"
        android:layout_gravity="center"
        ></TextView>


</LinearLayout>